104
- squeezelite: update to a3d95ec and link audio libraries

103
- Add alsamixer
- Update mpg123 to 1.23.6
- Update squeezelite to 33cca7e

102
- Remove IR support from squeezelite

101
- Add mpg123 and squeezelite

100
- Initial Release